2022-06-09 Se agrega primera versión de catálogos de software.

--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
@@ -580,6 +580,22 @@
                 theme: 'bootstrap4'
             })
 
+            $("#clave_planta").change(function () {
+
+                var cPlanta = document.getElementById("clave_planta");
+
+                //realiza llamada para lineas
+                $.ajax({
+                    type: 'POST',
+                    url: '/Combos/obtieneLineasPlantas',
+                    data: { clavePlanta: cPlanta.value },
+                    success: function (data) {
+                        populateDropdown($("#id_linea"), data);
+                    },
+                    async: false
+                });
+
+            });
 
         });
 
