--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/CreateTablet.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/CreateTablet.cshtml
@@ -204,7 +204,7 @@
                             <div class="ln_solid"></div>
                             <div class="item form-group">
                                 <div class="col-md-12 col-sm-12 offset-md-12">
-                                    <button type="submit" class="btn btn-success btn-lg float-lg-right"> <i class="fa-regular fa-floppy-disk"></i>&ensp;Guardar</button>
+                                    <button type="submit" class="btn btn-success btn-lg float-lg-right"> <i class="fa-regular fa-floppy-disk"></i>&ensp;Save</button>
                                 </div>
                             </div>
                         }
@@ -213,7 +213,7 @@
                 <div>
                     <br />
                     <a href="@Url.Action("tablet", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
-                        <i class="fa fa-arrow-circle-left"></i> Volver al listado
+                        <i class="fa fa-arrow-circle-left"></i> Back to List
                     </a>
                 </div>
             </div>
