--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/DetailsRadio.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/DetailsRadio.cshtml
@@ -153,7 +153,7 @@
                 <div>
                     <br />
                     <a onclick="volverAtras()" class="btn btn-round btn-info" title="Volver" style="color:white">
-                        <i class="fa fa-arrow-circle-left"></i> Volver al listado
+                        <i class="fa fa-arrow-circle-left"></i> Back to List
                     </a>
                 </div>
             </div>
