--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/smartphone.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/smartphone.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Smartphones";
     ViewBag.PrimerNivel = "sistemas";
-    ViewBag.SegundoNivel = "IT_Catalogos_inventory";
+    ViewBag.SegundoNivel = "IT_Catalogos_inventory_telefonia";
     ViewBag.TercerNivel = "IT_Inventory_smartphone";
     ViewBag.ControllerName = "IT_inventory_items";
 
@@ -138,9 +138,8 @@
                                     <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.id_inventory_type)
-                                                </th>
+                                                <th width="5%">Actions</th>
+
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_planta)
                                                 </th>
@@ -155,8 +154,9 @@
                                                     @Html.DisplayNameFor(model => model.serial_number)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.inches)
+                                                    Plan
                                                 </th>
+
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.is_in_operation)
                                                 </th>
@@ -164,7 +164,6 @@
                                                     @Html.DisplayNameFor(model => model.active)
                                                 </th>
 
-                                                <th>Actions</th>
 
                                             </tr>
                                         </thead>
@@ -173,7 +172,15 @@
                                             {
                                                 <tr style="@(item.active == false ? "color:red" :"" )">
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.IT_inventory_hardware_type.descripcion)
+                                                        <a href="@Url.Action("Editsmartphone", null, new { id = item.id, _id_planta = id_planta, _pagina= pagina, _model= modelo, _active = active })" class="btn btn-success " title="Edit">
+                                                            <i class="fa-regular fa-pen-to-square"></i>
+                                                        </a>
+                                                        <a href="@Url.Action("Detailssmartphone", null, new { id = item.id })" class="btn btn-primary " title="Details">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </a>
+                                                        @*<a href="@Url.Action("Deletesmartphone", null, new { id = item.id })" class="btn btn-danger " title="Delete">
+                <i class="fa-regular fa-trash-can"></i>
+            </a>*@
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.plantas.descripcion)
@@ -188,7 +195,7 @@
                                                         @Html.DisplayFor(modelItem => item.serial_number)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.inches)
+                                                        @item.GetNombrePlan()
                                                     </td>
                                                     <td>
                                                         @if (item.is_in_operation.HasValue)
@@ -217,17 +224,7 @@
                                                             <span>False</span>
                                                         }
                                                     </td>
-                                                    <td>
-                                                        <a href="@Url.Action("Editsmartphone", null, new { id = item.id, _id_planta = id_planta, _pagina= pagina, _model= modelo, _active = active })" class="btn btn-success " title="Edit">
-                                                            <i class="fa-regular fa-pen-to-square"></i>
-                                                        </a>
-                                                        <a href="@Url.Action("Detailssmartphone", null, new { id = item.id })" class="btn btn-primary " title="Details">
-                                                            <i class="fa-solid fa-circle-info"></i>
-                                                        </a>
-                                                        @*<a href="@Url.Action("Deletesmartphone", null, new { id = item.id })" class="btn btn-danger " title="Delete">
-                <i class="fa-regular fa-trash-can"></i>
-            </a>*@
-                                                    </td>
+
                                                 </tr>
                                             }
                                         </tbody>
