--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_software/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_software/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model IEnumerable<Portal_2_0.Models.IT_inventory_software>
 
 @{
-    ViewBag.Title = "Software List..";
-   
+    ViewBag.Title = "Software List";
+    ViewBag.PrimerNivel = "sistemas";
+    ViewBag.SegundoNivel = "IT_Catalogos_inventory_software";
+    ViewBag.TercerNivel = "IT_Inventory_software";
     ViewBag.ControllerName = "IT_inventory_software";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
@@ -15,7 +17,6 @@
     {
         description = paginacionFiltros.ValoresQueryString["description"].ToString();
     }
-
 
 }
 
@@ -100,6 +101,9 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.descripcion)
                                                 </th>
+                                                <th style="width:5%">
+                                                    Registered versions
+                                                </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
@@ -114,6 +118,9 @@
                                                 <tr style="@(item.activo == false ? "color:red" :"" )">
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @item.IT_inventory_software_versions.Count
                                                     </td>
                                                     <td>
                                                         @if (item.activo)
@@ -131,7 +138,7 @@
                                                         </a>
                                                         <a href="@Url.Action("Details", null, new { id = item.id })" class="btn btn-primary " title="Details">
                                                             <i class="fa-solid fa-circle-info"></i>
-                                                        </a>                                                        
+                                                        </a>
                                                     </td>
                                                 </tr>
                                             }
